Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-29396

WM_CLASS is not set for widgets in X11

XMLWordPrintable

    • Qt 5.2 (dev) c96a6ab627100452864eb4d8da973300401c1bfa (argc, argv parsing for platform plugins) ., Qt 5.1.1 (stable) 81addcc1edddaefa19080ad90c27df49f92b53a6

      QWidgets in Qt5 under X11 have no WM_CLASS property. Which breaks wm rules etc.

      Works well in Qt4.

        For Gerrit Dashboard: QTBUG-29396
        # Subject Branch Project Status CR V

            kleint Friedemann Kleint
            yyc1992 Yichao Yu
            Votes:
            2 Vote for this issue
            Watchers:
            10 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes