XCB: Set WM_CLASS.

Set the instance name and class name of the application windows.

Task-number: QTBUG-29396

Change-Id: Ia1fb492ab169108c3779deb8964bb731b322dd89
Reviewed-by: Uli Schlachter <psychon@znc.in>
Reviewed-by: Shawn Rutledge <shawn.rutledge@digia.com>

cregit: 81addcc1edddaefa19080ad90c27df49f92b53a6 https://github.com/qt/qtbase/commit/81addcc1edddaefa19080ad90c27df49f92b53a6